<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="7dp"
    android:layout_marginTop="7dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/notification_hist_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_hist_time_place_holder"/>

    <TextView
        android:id="@+id/notification_hist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/notification_hist_title_place_holder"/>

    <TextView
        android:id="@+id/notification_hist_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/text_black"
        android:textSize="15sp"
        android:text="@string/notification_hist_message_place_holder"/>

    <include layout="@layout/divider" />

</LinearLayout>