<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp">

    <TextView
        android:id="@+id/timetable_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/text_black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/timetable_place_holder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/clock"
            android:clickable="true"
            android:contentDescription="@string/timetable_place_holder"/>

        <TextView
            android:id="@+id/timetable_dialog_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:clickable="true"
            android:text="@string/timetable_place_holder_time"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/timetable_dialog_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timetable_dialog_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/timetable_dialog_info_place_holder"/>

    </ScrollView>


</LinearLayout>