<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/host_item_frame"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="8dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blackOverlay"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/host_image_place_holder"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:contentDescription="@string/host_overlay"/>

                <ImageView
                    android:id="@+id/host_item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/host_picture"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/host_overlay"
                    android:contentDescription="@string/host_overlay"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/host_item_frame"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/host_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_black"
                    android:text="@string/host_item_name_place_holder"/>

                <TextView
                    android:id="@+id/host_item_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/host_item_info_place_holder" />

            </LinearLayout>

            <ImageView
                android:id="@+id/host_item_mail"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="-10dp"
                android:layout_marginBottom="-3dp"
                android:layout_alignBottom="@id/host_item_frame"
                android:layout_alignEnd="@id/host_item_frame"
                android:src="@drawable/mail"
                android:contentDescription="@string/host_mail_image"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>