<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="34dp"
    android:paddingEnd="34dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp">


        <ImageView
            android:id="@+id/timetable_item_clock"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/clock"
            android:clickable="true"
            android:contentDescription="@string/timetable_place_holder"/>

        <TextView
            android:id="@+id/timetable_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/timetable_item_clock"
            android:textSize="16sp"
            android:clickable="true"
            android:text="@string/timetable_place_holder_time"/>

        <android.support.v7.widget.CardView
            android:id="@+id/timetable_item_now_tab"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/timetable_item_time"
            android:visibility="gone"
            android:backgroundTint="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:clickable="true"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/text_white"
                android:text="@string/timetable_item_now"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/timetable_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/timetable_item_clock"
            android:gravity="start"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/timetable_place_holder"/>

        <ImageView
            android:id="@+id/timetable_item_info_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignEnd="@id/timetable_item_name"
            android:tint="@color/section_bar"
            android:src="@drawable/menu_about"
            android:visibility="gone"
            android:contentDescription="@string/timetable_info_icon" />

    </RelativeLayout>

    <include layout="@layout/divider" />

</LinearLayout>