<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/sponsor_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/application_created_by"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/info_asi_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/asi_logo"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/academic_it_association"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/me_image_frame"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="8dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/blackOverlay"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/host_image_place_holder"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:contentDescription="@string/host_overlay"/>

                    <ImageView
                        android:id="@+id/me_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/host_picture"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/host_overlay"
                        android:contentDescription="@string/host_overlay"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/me_image_frame"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/host_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textAllCaps="true"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_black"
                        android:text="@string/me"/>

                    <TextView
                        android:id="@+id/host_item_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/me_info" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/me_mail"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="-30dp"
                    android:layout_marginBottom="-3dp"
                    android:layout_alignBottom="@id/me_image_frame"
                    android:layout_alignEnd="@id/me_image_frame"
                    android:src="@drawable/mail"
                    android:contentDescription="@string/host_mail_image"/>

                <ImageView
                    android:id="@+id/me_fb"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="-60dp"
                    android:layout_alignBottom="@id/me_mail"
                    android:layout_alignEnd="@id/me_mail"
                    android:src="@drawable/fb"
                    android:contentDescription="@string/host_mail_image"/>

                <FrameLayout
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignBottom="@id/me_fb"
                    android:layout_alignEnd="@id/me_fb"
                    android:layout_marginEnd="-60dp">

                    <ImageView
                        android:id="@+id/me_git"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/blank"
                        android:contentDescription="@string/host_mail_image"/>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/github"
                        android:contentDescription="@string/host_mail_image"/>

                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/special_thanks_for_creating_graphics_to"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:id="@+id/info_img_frame"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_margin="8dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/blackOverlay"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/host_image_place_holder"
                            android:scaleX="0.5"
                            android:scaleY="0.5"
                            android:contentDescription="@string/host_overlay"/>

                        <ImageView
                            android:id="@+id/info_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/host_picture"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/host_overlay"
                            android:contentDescription="@string/host_overlay"/>

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/info_img_frame"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical"
                        android:layout_centerVertical="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textAllCaps="true"
                            android:textColor="@color/text_black"
                            android:text="@string/roksana_kowalczyk"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="@string/graphic_designer_conference_host" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/info_mail"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="-10dp"
                        android:layout_marginBottom="-3dp"
                        android:layout_alignBottom="@id/info_img_frame"
                        android:layout_alignEnd="@id/info_img_frame"
                        android:src="@drawable/mail"
                        android:contentDescription="@string/host_mail_image"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>